--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -346,4 +346,16 @@
   .Section {
     @apply relative flex items-center justify-center flex-col gap-8 p-4 pt-16 lg:pt-24;
   }
+
+  .header-special-title {
+    background: linear-gradient(
+      135deg,
+      rgba(148, 214, 255, 0.8) 0%,
+      rgba(148, 214, 255, 0.5) 37%,
+      rgba(148, 214, 255, 0) 100%
+    );
+    background-size: 250% 250%;
+    animation: gradient-move 10s ease-in-out infinite;
+    @apply max-w-fit text-center p-2 bg-accent/5 rounded-full shadow border border-border/25 mx-auto mb-4;
+  }
 }
