--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -356,6 +356,6 @@
     );
     background-size: 250% 250%;
     animation: gradient-move 10s ease-in-out infinite;
-    @apply max-w-fit text-center p-2 bg-accent/5 rounded-full shadow border border-border/25 mx-auto mb-4;
+    @apply max-w-fit text-center p-2 bg-accent/5 rounded-full shadow border border-border/25 md:mx-auto mb-4;
   }
 }
